chore: sanitize personal data and prepare for public release